client/src/components/modal/view/PasswordDetail.scss
.Password__Detail {
  display: flex;
  align-items: center;
  justify-content: space-between;

  .Password__Detail__Input {
    display: flex;
    align-items: center;
    height: 45px;
    width: 300px;
    background-color: var(--accent);
    padding-left: 10px;
    border-radius: 6px;

    input:disabled {
      background-color: transparent;
      color: #6e49e8;
      font-size: 16px;
      border: none;
      padding: 0;
    }

    .Password__Detail__Actions {
      display: flex;
      flex: 1;
      gap: 5px;

      div {
        display: flex;
        align-items: center;
        justify-content: center;
        width: 30px;
        height: 30px;
        border-radius: 4px;
        color: #6e49e8;

        &:hover {
          cursor: pointer;
          background-color: var(--accent-hover);
        }
      }

      .Password__Detail__Action__Disabled {
        visibility: hidden;
      }
    }
  }

  span {
    margin-left: auto;
  }
}

